# wiggum_stauss_template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Brewfile  CLAUDE.md  Makefile  PROMPT_build.md  PROMPT_plan.md  claude_PROMPT_build.md  claude_loop.sh  codex_PROMPT_build.md  codex_PROMPT_plan.md  codex_loop.sh  loop.sh
.claude/agents/: annotation-resolver.md  implementation-plan-auditor.md  tdd-test-writer.md
.claude/commands/: audit_plan.md  commit_changes.md  concentrate.md  create_spec_index.md  resolve_annotations.md  validate_plan.md
.claude/skills/create-skill/: SKILL.md  best-practices.md  init_skill.py  patterns.md  validate_skill.py
.claude/skills/developing-python/: SKILL.md
.claude/skills/developing-python/references/: design-patterns.md  error-handling.md  performance-async.md  security-checklist.md  type-system.md
.claude/skills/developing-python/scripts/: check_types.py
.claude/skills/writing-requirements/: SKILL.md
.claude/skills/writing-requirements/references/: reference.md  requirement-writing-guide.md  srs-template.md  verification-traceability.md
.claude/skills/writing-requirements/scripts/: validate_srs.py  writing_requirements_helper.py
mutants/: mutmut-stats.json  pyproject.toml
mutants/src/project_name/: __main__.py  main.py
skills/python-senior-practices/: SKILL.md
skills/python-senior-practices/agents/: openai.yaml
skills/python-senior-practices/references/: design-patterns.md  performance-async.md  security-checklist.md
skills/write-srs-29148/: SKILL.md
skills/write-srs-29148/agents/: openai.yaml
skills/write-srs-29148/references/: requirement-writing-guide.md  srs-template.md  verification-traceability.md
skills/write-srs-29148/scripts/: validate_srs.py
skills/write-tests-tdd/: SKILL.md
skills/write-tests-tdd/agents/: openai.yaml
src/project_name/: __main__.py  main.py
tests/: conftest.py  test_main.py
thoughts/shared/plan/: IMPLEMENTATION_PLAN.md
